force-app/main/default/objects/Forrester_SHIR_CASE_FH_INCOME_SUMMARY__x/Forrester_SHIR_CASE_FH_INCOME_SUMMARY__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_CASE_FH_INCOME_SUMMARY</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_CASE_FH_INCOME_SUMMARY</externalName>
    <label>Forrester_SHIR_CASE_FH_INCOME_SUMMARY</label>
    <pluralLabel>Forrester_SHIR_CASE_FH_INCOME_SUMMARY</pluralLabel>
</CustomObject>