force-app/main/default/objects/Forrester_SHIR_CASE_FH_INCOME_SUMMARY__x/fields/AGREEMENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_TYPE__c</fullName>
    <description>AGREEMENT_TYPE</description>
    <externalDeveloperName>AGREEMENT_TYPE</externalDeveloperName>
    <label>AGREEMENT_TYPE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>