force-app/main/default/objects/Forrester_SHIR_CASE_FH_INCOME_SUMMARY__x/fields/AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT__c</fullName>
    <description>AMOUNT</description>
    <externalDeveloperName>AMOUNT</externalDeveloperName>
    <label>AMOUNT</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>