force-app/main/default/objects/Forrester_SHIR_CASE_FH_INCOME_SUMMARY__x/fields/CASE_RECID__c.field-meta.xml
<CustomField>
    <fullName>CASE_RECID__c</fullName>
    <description>CASE_RECID</description>
    <externalDeveloperName>CASE_RECID</externalDeveloperName>
    <label>CASE_RECID</label>
    <length>12</length>
    <referenceTo>Forrester_Case__x</referenceTo>
    <relationshipLabel>Forrester_SHIR_CASE_FH_INCOME_SUMMARY</relationshipLabel>
    <relationshipName>Forrester_SHIR_CASE_FH_INCOME_SUMMARY</relationshipName>
    <type>ExternalLookup</type>
</CustomField>