force-app/main/default/objects/Forrester_SHIR_CASE_FH_INCOME_SUMMARY__x/fields/INCOME_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INCOME_TYPE__c</fullName>
    <description>INCOME_TYPE</description>
    <externalDeveloperName>INCOME_TYPE</externalDeveloperName>
    <label>INCOME_TYPE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>