force-app/main/default/objects/Forrester_SHIR_CASE_FH_INCOME_SUMMARY__x/fields/LICENSEE__c.field-meta.xml
<CustomField>
    <fullName>LICENSEE__c</fullName>
    <description>LICENSEE</description>
    <externalDeveloperName>LICENSEE</externalDeveloperName>
    <label>LICENSEE</label>
    <length>90</length>
    <type>Text</type>
</CustomField>